# gRPC-rust-example

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.services.yml
proto/: hello.proto
src/: client.rs  config.rs  dynamodb.rs  server.rs
src/config/environment/: local.yml
